; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__anonymous_remote_inmemory_repo.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__anonymous_remote_inmemory_repo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@file_path_buf = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@GIT_DIRECTION_FETCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_local__anonymous_remote_inmemory_repo() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 @cl_fixture(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_path_url(i32 %3)
  %5 = call i32 @git_buf_sets(i32* @file_path_buf, i32 %4)
  %6 = call i32 @git_repository_new(i32** %1)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @git_buf_cstr(i32* @file_path_buf)
  %10 = call i32 @git_remote_create_anonymous(i32** %2, i32* %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @GIT_DIRECTION_FETCH, align 4
  %14 = call i32 @git_remote_connect(i32* %12, i32 %13, i32* null, i32* null, i32* null)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @git_remote_connected(i32* %16)
  %18 = call i32 @cl_assert(i32 %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @git_remote_disconnect(i32* %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @git_remote_free(i32* %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @git_repository_free(i32* %23)
  ret void
}

declare dso_local i32 @git_buf_sets(i32*, i32) #1

declare dso_local i32 @cl_git_path_url(i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_new(i32**) #1

declare dso_local i32 @git_remote_create_anonymous(i32**, i32*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_remote_connect(i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_remote_connected(i32*) #1

declare dso_local i32 @git_remote_disconnect(i32*) #1

declare dso_local i32 @git_remote_free(i32*) #1

declare dso_local i32 @git_repository_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
